--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -6,9 +6,8 @@ html(lang='en')
         title= title
         block css
             link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.css')
-            link(rel='stylesheet', href='/css/style.css')
     body
-        block content
+        block main
 
         block js
             script(src='/components/jquery/dist/jquery.js')
