blog post index/category posts

--- a/app/views/blog/index.jade
+++ b/app/views/blog/index.jade
@@ -1,13 +1,14 @@
 extends layout
 
 block content
+    h2.page-header Node全栈博客系统
     each post in posts
         div.post
             h3.post-title
                 a(href="/posts/view/" + post._id, target="_blank")
                     =post.title
             div.post-abstract
-                =post.content
+                =truncate(post.content, 160)
             div.post-meta
                 span.post-created
                     时间:&nbsp;
@@ -17,7 +18,8 @@ block content
                     =post.author.name
                 span.post-category
                     分类:&nbsp;
-                    =post.category.name
+                    a(href="/posts/category/" + post.category.name, target="_blank")
+                        =post.category.name
                 span.post-comment
                     评论:&nbsp;
                     =post.comments.length || 0
@@ -27,5 +29,22 @@ block content
                 span.post-link
                     a(href="/posts/view/" + post._id, target="_blank") 查看全文
 
+    if pageCount > 1
+        nav
+            ul.pagination
+                - var currentPage = 1
+                while currentPage < pageCount
+                    if (currentPage === pageNum)
+                        li.active
+                            a(href="/posts?page=" + currentPage)= currentPage++
+                    else
+                        li
+                            a(href="/posts?page=" + currentPage)= currentPage++
+
 block scripts
     script $(document).ready(function () { console.log('dom ready'); });
+
+
+
+
+
