--- a/app/views/blog/layout.jade
+++ b/app/views/blog/layout.jade
@@ -31,16 +31,10 @@ block main
                 .sidebar-module
                     h4 文章分类
                     ol.list-unstyled
-                        li
-                            a(href="#") March 2014
-                        li
-                            a(href="#") February 2014
-                        li
-                            a(href="#") January 2014
-                        li
-                            a(href="#") December 2013
-                        li
-                            a(href="#") November 2013
+                        each category in categories
+                            li
+                                a(href="/posts/category/" + category.name, target="_blank")
+                                    = category.name
 
                 .sidebar-module
                     h4 友情链接
