--- a/app/views/blog/layout.jade
+++ b/app/views/blog/layout.jade
@@ -1,6 +1,7 @@
 extends ../layout
 
 append css
+    link(rel='stylesheet', href='/components/font-awesome/css/font-awesome.css')
     link(rel='stylesheet', href='/css/blog.css')
 
 block main
