--- a/app/views/blog/layout.jade
+++ b/app/views/blog/layout.jade
@@ -27,6 +27,7 @@ block main
     .container
         .row
             .col-sm-8.blog-main
+                != messages()
                 block content
             .col-sm-3.col-sm-offset-1.blog-sidebar
                 .sidebar-module
