admin: post list part 1

--- a/app/views/admin/layout.jade
+++ b/app/views/admin/layout.jade
@@ -31,7 +31,7 @@ block main
             .col-sm-3.col-md-2.sidebar
                 ul.nav.nav-sidebar
                     li.active
-                        a(href="/admin/posts/list")
+                        a(href="/admin/posts")
                             i.fa.fa-files-o
                             | &nbsp;文章列表
                     li
@@ -39,7 +39,7 @@ block main
                             i.fa.fa-file-o
                             | &nbsp;添加文章
                     li
-                        a(href="/admin/categories/list")
+                        a(href="/admin/categories")
                             i.fa.fa-th-list
                             | &nbsp;分类列表
                     li
@@ -54,4 +54,5 @@ block main
                             | &nbsp;修改密码
 
             .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
+                != messages()
                 block content
