--- a/app/views/admin/post/add.jade
+++ b/app/views/admin/post/add.jade
@@ -3,21 +3,26 @@ extends ../layout
 block content
     h2.page-header 添加文章
 
+    if errors && errors.length
+        div.errors
+            each error in errors
+                p.alert.alert-danger= error.msg
+
     form.vertical-form(method="post", action="/admin/posts/add")
         div.form-group
             label(for="title") 标题
-            input.form-control.input-lg(name="title", placeholder="请输入标题...")
+            input.form-control.input-lg(name="title", required="true", placeholder="请输入标题...")
 
         div.form-group
             label(for="category") 分类
-            select.form-control.input-lg(name="category")
+            select.form-control.input-lg(name="category", required="true")
                 option(value="", selected=true) - 选择分类 -
                 each category in categories
                     option(value=category._id)= category.name
 
         div.form-group
             label(for="content") 内容
-            textarea#js-post-content.form-control(name="content")
+            textarea#js-post-content.form-control(name="content", required="true")
 
         button.btn.btn-info(type="submit") 发布
 
