user register part 1

--- a/app/views/blog/layout.jade
+++ b/app/views/blog/layout.jade
@@ -56,4 +56,11 @@ block main
         footer.blog-footer
             p NodeBlog by wangshijun@maiziedu.com
             p
-                a(href="#") Back to top
+                a(href="#") 回到顶部
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                a(href="/admin/users/login") 用户登录
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                a(href="/admin/users/register") 用户注册
+
+
+                
