--- a/app/views/admin/layout.jade
+++ b/app/views/admin/layout.jade
@@ -17,10 +17,13 @@ block main
                 a.navbar-brand(href="/") NODE.JS 全栈博客系统
             #navbar.navbar-collapse.collapse
                 ul.nav.navbar-nav.navbar-right
-                    li
-                        a(href="/admin/users/logout")
-                            i.fa.fa-unlock-alt
-                            | &nbsp;注销
+                    if user
+                        li
+                            a= user.email
+                        li
+                            a(href="/admin/users/logout")
+                                i.fa.fa-unlock-alt
+                                | &nbsp;注销
                     li
                         a(href="#")
                             i.fa.fa-question
